@@ -11,48 +11,57 @@ members_schema = {
     'id': {
         'type': 'CPS String Field',
         'data': {
-                'default': '',
+                'default_expr': 'string:',
             },
         },
     'password': {
         'type': 'CPS Password Field',
         'data': {
-                'default': '',
+                'default_expr': 'string:',
                 'acl_write_roles': 'Manager; Owner',
             },
         },
+    'confirm': {
+        'type': 'CPS Password Field',
+        'data': {
+            'default_expr': 'string:',
+            'read_ignore_storage': 1,
+            'read_process_dependent_fields': ['password'],
+            'write_ignore_storage': 1,
+        },
+    },
     'roles': {
         'type': 'CPS String List Field',
         'data': {
-                'default': '',
+                'default_expr': 'python:[]',
                 'acl_write_roles': 'Manager',
             },
         },
     'groups': {
         'type': 'CPS String List Field',
         'data': {
-                'default': '',
+                'default_expr': 'python:[]',
                 'acl_write_roles': 'Manager',
             },
         },
     'givenName': {
         'type': 'CPS String Field',
         'data': {
-                'default': '',
+                'default_expr': 'string:',
                 'acl_write_roles': 'Manager; Owner',
             },
         },
     'sn': {
         'type': 'CPS String Field',
         'data': {
-                'default': '',
+                'default_expr': 'string:',
                 'acl_write_roles': 'Manager; Owner',
             },
         },
     'fullname': {
         'type': 'CPS String Field',
         'data': {
-                'default': '',
+                'default_expr': 'string:',
                 'acl_write_roles': 'Nobody',
                 'read_ignore_storage': 1,
                 'read_process_expr': 'python: givenName+" "+sn',
@@ -63,7 +72,7 @@ members_schema = {
     'email': {
         'type': 'CPS String Field',
         'data': {
-                'default': '',
+                'default_expr': 'string:',
                 'acl_write_roles': 'Manager; Owner',
             },
         },
@@ -73,37 +82,37 @@ members_search_schema = {
     'id': {
         'type': 'CPS String Field',
         'data': {
-                'default': '',
+                'default_expr': 'string:',
             },
         },
     'roles': {
         'type': 'CPS String List Field',
         'data': {
-                'default': '',
+                'default_expr': 'python:[]',
             },
         },
     'groups': {
         'type': 'CPS String List Field',
         'data': {
-                'default': '',
+                'default_expr': 'python:[]',
             },
         },
     'givenName': {
         'type': 'CPS String Field',
         'data': {
-                'default': '',
+                'default_expr': 'string:',
             },
         },
     'sn': {
         'type': 'CPS String Field',
         'data': {
-                'default': '',
+                'default_expr': 'string:',
             },
         },
     'email': {
         'type': 'CPS String Field',
         'data': {
-                'default': '',
+                'default_expr': 'string:',
             },
         },
     }
@@ -115,13 +124,13 @@ roles_schema = {
     'role': {
         'type': 'CPS String Field',
         'data': {
-                'default': '',
+                'default_expr': 'string:',
             },
         },
     'members': {
         'type': 'CPS String List Field',
         'data': {
-                'default': '',
+                'default_expr': 'python:[]',
                 'acl_write_roles': 'Manager',
             },
         },
@@ -134,20 +143,20 @@ groups_schema = {
     'group': {
         'type': 'CPS String Field',
         'data': {
-                'default': '',
+                'default_expr': 'string:',
             },
         },
     'members': {
         'type': 'CPS String List Field',
         'data': {
-                'default': '',
+                'default_expr': 'python:[]',
                 'acl_write_roles': 'Manager',
             },
         },
     'subgroups': {
         'type': 'CPS String List Field',
         'data': {
-                'default': '',
+                'default_expr': 'python:[]',
                 'acl_write_roles_str': 'Manager',
                 'acl_write_expression_str':
                     'dir/hasSubGroupsSupport'
